# uzumaki

./: .gitignore  .oxlintrc.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  FIXME.md  PORTING.md  README.md  index.html  main.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  temp.txt  tsconfig.base.json  tsconfig.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: cli.rs  init.rs  main.rs  utils.rs
crates/cli/template/: build.ts  package.json  tsconfig.json  uzumaki.config.json
crates/uzumaki/: Cargo.toml  README.md  build.rs  package.json  tsconfig.json
crates/uzumaki/cli/: main.ts
crates/uzumaki/core/: runtime.js
crates/uzumaki/js/: clipboard.ts  core.ts  dispatcher.ts  event-target.ts  events.ts  index.ts  lib.ts  node.ts  registry.ts  runtime.ts  types.ts  window.ts
crates/uzumaki/src/: app.rs  clipboard.rs  construct.rs  element.rs  event_dispatch.rs  gpu.rs  headless.rs  hit_tree.rs  input.rs  interactivity.rs  layout.rs  lib.rs  main.rs  node.rs  ops.rs  parse.rs  prop_keys.rs  selection.rs  shared_string.rs  style.rs  terminal_colors.rs  text.rs  text_buffer.rs  text_model.rs  ui.rs  window.rs
crates/uzumaki_core/: Cargo.toml  package.json
crates/uzumaki_core/js/: events.ts  index.ts  main.ts
crates/uzumaki_core/js/react/: reconciler.ts
crates/uzumaki_core/js/react/jsx/: runtime.ts  types.ts
crates/uzumaki_core/src/: element.rs  input.rs  interactivity.rs  lib.rs  style.rs  text.rs  window.rs
crates/uzumaki_core_exp/: Cargo.toml  README.md  package.json
crates/uzumaki_core_exp/core/: 00_init.js  timers.js
crates/uzumaki_core_exp/js/: core.ts  events.ts  index.ts  window.ts
crates/uzumaki_core_exp/js/react/: reconciler.ts  useInput.ts
crates/uzumaki_core_exp/src/: element.rs  event_dispatch.rs  main.rs  main_copy.rs  module_loader.rs  preload.js  resolver.rs  text_buffer.rs  ts.rs
crates/uzumaki_core_exp/src/elements/: input.rs
crates/uzumaki_core_exp/src/runtime/: resolver.rs  ts.rs
docs/: .gitignore  astro.config.mjs  package.json  typedoc.tsconfig.json  vercel.json
docs/public/: install.ps1
docs/src/styles/: custom.css
scripts/: copy-binary.ts  generate-types.js  publish.ts
(+72 files in other folders)
