[package]
name = "uzumaki_core"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
refineable.workspace = true

pollster.workspace = true
anyhow.workspace = true
cosmic-text = "0.18.2"
napi = { version = "3", features = ["serde-json"] }
napi-derive = "3"
slotmap = { version = "1.1.1", features = ["serde"] }
taffy = "0.9.2"
vello = "0.7.0"
wgpu = "27.0.1"
winit = "0.30.13"
tsify.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build = "1"
