[package]
name = "uzumaki_core_exp"
version = "0.1.0"
edition.workspace = true

[dependencies]
# utils
refineable.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-segmentation = "1.11"
pollster.workspace = true
anyhow.workspace = true
tokio = { version = "1", features = ["rt", "time"] }
# Deno deps
deno_core = "0.394.0"
# deno_runtime = "0.249.0"
deno_error = "=0.7.1"
deno_ast = { version = "0.53.1", features = ["transpiling", "typescript", "react"] }

# https://github.com/denoland/deno/discussions/32444#discussioncomment-15993969
winapi = { version = "=0.3.9", features = ["std"]}
# todo add later after porting everything
# deno_web = "0.272.0"
# deno_webidl = "0.241.0"
# deno_node = "0.179.0"
# deno_io = "0.151.0"
# deno_fs = "0.151.0"
sys_traits = { version = "=0.1.25", features = ["real"] }
node_resolver = "0.79.0"
deno_resolver = "0.72.0"
# deno_permissions = "0.100.0"

# Rendering
cosmic-text = "0.18.2"
slotmap = { version = "1.1.1", features = ["serde"] }
taffy = "0.9.2"
vello = "0.7.0"
wgpu = "27.0.1"
winit = "0.30.13"
